refac model to dto
